--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
         </div>
 
         <figure class="map">
-          <p><img src="img/map.png" alt="Карта с адресом"></p>
+          <p><img src="img/map.png" width="1200" height="430" alt="Карта с адресом"></p>
           <div class="container-address">
             <div class="store-address">
-              <p class="contact-description">Адрес главного офиса и онлайн магазина</p>
-              <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
-              <p class="contact-description">для заказов по телефону:</p>
-              <p>8 812 450-25-25</p>
-              <p class="contact-description">(с 10 до 20 часов)</p>
+              <p class="address-small">Адрес главного офиса и офлайн магазина</p>
+              <p class="address-big">ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+              <p class="address-small">Для заказов по телефону:</p>
+              <p class="address-big">8 812 450-25-25</p>
+              <p class="address-small">(с 10 до 20 часов)</p>
               <a class="feedback-form" href="#">Форма обратной связи</a>
             </div>
           </div>
@@ -275,4 +275,4 @@
   </div>
 </body>
 
-</html>
+</html> 
