--- a/catalog.html
+++ b/catalog.html
@@ -231,29 +231,18 @@
       <section class="item-cards">
         <h2 class="visually-hidden">Карточки товаров</h2>
         <div class="item-cards-table">
-
           <div class="icecream-card">
             <img src="img/icecream-orange.jpg" alt="фото мороженки">
             <p class="card-price">310 ₽/кг</p>
             <a class="card-name">Сливочное c апельсиновым джемом и цитрусовой стружкой</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
-
-
-
-
           <div class="icecream-card">
             <img src="img/icecream-coffee.jpg" alt="фото мороженки">
             <p class="card-price">380 ₽/кг</p>
             <a class="card-name">Сливочно-кофейное с кусочками шоколада</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
-
-
-
-
-
-
           <div class="icecream-card">
             <img src="img/icecream-strawberry.jpg" alt="фото мороженки">
             <p class="card-price">355 ₽/кг</p>
@@ -316,8 +305,20 @@
           </div>
         </div>
       </section>
+      <div class="paginator">
+        <a class="previous-page disabled"></a>
+        <a class="page page-1 current-page">1</a>
+        <a class="page page-2" href="#">2</a>
+        <a class="page page-3" href="#">3</a>
+        <a class="page page-4" href="#">4</a>
+        <a class="page page-5" href="#">5</a>
+        <a class="next-page" href="#"></a>
+      </div>
     </section>
   </main>
+
+
+
 </body>
 
 </html>
