--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
               <a class="user-navigation-item login-link" href="http://search.html">Вход</a>
               <form class="login-form" method="get" action="http://search.html">
                 <p>
-                  <label for="login-user" hidden="">Электронная почта</label>
+                  <label for="login-user" hidden>Электронная почта</label>
                   <input type="text" id="login-user" name="login" placeholder="Электронная почта">
                 </p>
                 <p>
