--- a/index.html
+++ b/index.html
@@ -206,9 +206,8 @@
             <section class="newsletter">
               <form class="mail-form" method="get" action="http://search.html">
                 <p class="newsletter-p">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-                <label for="user-mail">Электронная почта</label>
                 <input type="text" id="user-mail" placeholder="Электронная почта">
-                <input type="submit" value="Отправить">
+                <button type="submit">Отправить</button>
               </form>
             </section>
           </div>
